--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,14 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
+    "vite.config.ts",
+    "types/**/*.d.ts",
+    "scripts/**/*.ts"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
