--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lethal-company-mods-copier",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -12,9 +12,11 @@
   "dependencies": {
     "@node-steam/vdf": "^2.2.0",
     "@tauri-apps/api": "^1.5.3",
-    "vue": "^3.4.21"
+    "vue": "^3.4.21",
+    "vue-i18n": "^9.10.1"
   },
   "devDependencies": {
+    "@iconify-json/carbon": "^1.1.31",
     "@tauri-apps/cli": "^1.5.10",
     "@unocss/reset": "^0.58.5",
     "@unocss/transformer-directives": "^0.58.5",
@@ -24,7 +26,8 @@
     "typescript": "^5.3.3",
     "unocss": "^0.58.5",
     "unocss-preset-daisy": "^7.0.0",
-    "vite": "^5.1.4",
+    "unplugin-auto-import": "^0.17.5",
+    "vite": "^5.1.5",
     "vue-tsc": "^1.8.27"
   }
 }
