--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lethal-company-mods-copier"
-version = "0.0.1"
+version = "0.0.2"
 description = "Copy files to target game folder."
 authors = ["s3xysteak"]
 edition = "2021"
@@ -11,7 +11,7 @@ edition = "2021"
 tauri-build = { version = "1", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = [ "fs-all", "shell-all"] }
+tauri = { version = "1", features = [ "os-all", "fs-all", "shell-all"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
