--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,18 +28,19 @@ jobs:
           cache: pnpm
           registry-url: 'https://registry.npmjs.org'
 
-      - uses: dtolnay/rust-toolchain@stable
+      - name: Rust install
+        uses: dtolnay/rust-toolchain@stable
 
-      - run: npx changelogithub
-        env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      - name: Ubuntu - Prepare environment
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev
+
+      - name: Rust cache
+        uses: swatinem/rust-cache@v2
+        with:
+          workspaces: './src-tauri -> target'
 
       - run: pnpm i
 
       - run: pnpm tauri build
-
-      - name: Publish to NPM
-        run: pnpm publish --access public --no-git-checks
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
-          NPM_CONFIG_PROVENANCE: true
