--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   test:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
@@ -24,6 +24,11 @@ jobs:
 
       - name: Rust install
         uses: dtolnay/rust-toolchain@stable
+
+      - name: Ubuntu - Prepare environment
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev
 
       - name: Rust cache
         uses: swatinem/rust-cache@v2
