ci: Improve release scripts.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,19 +28,6 @@ jobs:
           cache: pnpm
           registry-url: 'https://registry.npmjs.org'
 
-      - name: Rust install
-        uses: dtolnay/rust-toolchain@stable
-
-      - name: Ubuntu - Prepare environment
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev
-
-      - name: Rust cache
-        uses: swatinem/rust-cache@v2
-        with:
-          workspaces: './src-tauri -> target'
-
-      - run: pnpm i
-
-      - run: pnpm tauri build
+      - run: npx changelogithub
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
