--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,20 +1,20 @@
 [package]
 name = "lethal-company-mods-copier"
-version = "0.0.5"
-description = "Copy files to target game folder."
-authors = ["s3xysteak"]
+version = "0.0.0"
+description = "A Tauri App"
+authors = ["you"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1", features = [] }
+tauri-build = { version = "2.0.0-beta", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = [ "os-all", "fs-all", "shell-all"] }
+tauri = { version = "2.0.0-beta", features = [] }
+tauri-plugin-shell = "2.0.0-beta"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+tauri-plugin-os = "2.0.0-beta.3"
+tauri-plugin-fs = "2.0.0-beta.3"
 
-[features]
-# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
-custom-protocol = ["tauri/custom-protocol"]
