--- a/package.json
+++ b/package.json
@@ -29,17 +29,18 @@
     "@iconify-json/carbon": "^1.1.31",
     "@tauri-apps/cli": "2.0.0-beta.11",
     "@types/node": "^20.12.2",
-    "@unocss/eslint-plugin": "0.59.0-beta.1",
-    "@unocss/reset": "0.59.0-beta.1",
-    "@unocss/transformer-directives": "0.59.0-beta.1",
+    "@unocss/eslint-plugin": "0.58.9",
+    "@unocss/reset": "0.58.9",
+    "@unocss/transformer-directives": "0.58.9",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "daisyui": "^3.9.4",
     "eslint": "^8.57.0",
     "typescript": "^5.4.3",
-    "unocss": "0.59.0-beta.1",
+    "unocss": "0.58.9",
     "unocss-preset-daisy": "^7.0.0",
     "unplugin-auto-import": "^0.17.5",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.2.7",
     "vue-tsc": "^2.0.7"
   }
