--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -2,7 +2,7 @@
 name = "lethal-company-mods-copier"
 version = "1.0.5"
 description = "A Tauri App"
-authors = ["you"]
+authors = ["s3xysteak"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
