--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^2.15.0",
     "@iconify-json/carbon": "^1.1.31",
-    "@tauri-apps/cli": "2.0.0-beta.13",
+    "@tauri-apps/cli": "2.0.2",
     "@types/node": "^20.12.7",
     "@unocss/eslint-plugin": "0.58.9",
     "@unocss/reset": "0.58.9",
