--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -8,19 +8,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-rc.0", features = [] }
+tauri-build = { version = "~2.0.0", features = [] }
 
 [dependencies]
-tauri = { version = "2.0.0-rc.0", features = [] }
-tauri-plugin-shell = "2.0.0-rc.0"
+tauri = { version = "~2.0.0", features = [] }
+tauri-plugin-shell = "~2.0.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tauri-plugin-os = "2.0.0-rc.0"
-tauri-plugin-fs = "2.0.0-rc.0"
-
-[profile.release]
-panic = "abort" # Strip expensive panic clean-up logic
-codegen-units = 1 # Compile crates one after another so the compiler can optimize better
-lto = true # Enables link to optimizations
-opt-level = "s" # Optimize for binary size
-strip = true # Remove debug symbols
+tauri-plugin-os = "~2.0.0"
+tauri-plugin-fs = "~2.0.0"
