--- a/package.json
+++ b/package.json
@@ -17,32 +17,32 @@
   },
   "dependencies": {
     "@node-steam/vdf": "^2.2.0",
-    "@tauri-apps/api": "2.0.0-beta.8",
-    "@tauri-apps/plugin-fs": "2.0.0-beta.2",
-    "@tauri-apps/plugin-os": "2.0.0-beta.2",
-    "@tauri-apps/plugin-shell": "2.0.0-beta.2",
-    "vue": "^3.4.23",
-    "vue-i18n": "^9.13.0"
+    "@tauri-apps/api": "2.0.2",
+    "@tauri-apps/plugin-fs": "2.0.0",
+    "@tauri-apps/plugin-os": "2.0.0",
+    "@tauri-apps/plugin-shell": "2.0.0",
+    "vue": "^3.5.11",
+    "vue-i18n": "^10.0.4"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.15.0",
-    "@iconify-json/carbon": "^1.1.31",
+    "@antfu/eslint-config": "^3.7.3",
+    "@iconify-json/carbon": "^1.2.2",
     "@tauri-apps/cli": "2.0.2",
-    "@types/node": "^20.12.7",
-    "@unocss/eslint-plugin": "0.58.9",
-    "@unocss/reset": "0.58.9",
-    "@unocss/transformer-directives": "0.58.9",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "@vitejs/plugin-vue-jsx": "^3.1.0",
-    "bumpp": "^9.6.1",
+    "@types/node": "^22.7.5",
+    "@unocss/eslint-plugin": "0.63.4",
+    "@unocss/reset": "0.63.4",
+    "@unocss/transformer-directives": "0.63.4",
+    "@vitejs/plugin-vue": "^5.1.4",
+    "@vitejs/plugin-vue-jsx": "^4.0.1",
+    "bumpp": "^9.7.1",
     "daisyui": "^3.9.4",
-    "eslint": "^8.57.0",
-    "typescript": "^5.4.5",
-    "unocss": "0.58.9",
+    "eslint": "^9.12.0",
+    "typescript": "^5.6.3",
+    "unocss": "0.63.4",
     "unocss-preset-daisy": "^7.0.0",
-    "unplugin-auto-import": "^0.17.5",
-    "unplugin-vue-components": "^0.26.0",
-    "vite": "^5.2.9",
-    "vue-tsc": "^2.0.13"
+    "unplugin-auto-import": "^0.18.3",
+    "unplugin-vue-components": "^0.27.4",
+    "vite": "^5.4.8",
+    "vue-tsc": "^2.1.6"
   }
 }
