--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "dependencies": {
     "@node-steam/vdf": "^2.2.0",
     "@tauri-apps/api": "2.0.2",
+    "@tauri-apps/plugin-dialog": "~2",
     "@tauri-apps/plugin-fs": "2.0.0",
     "@tauri-apps/plugin-os": "2.0.0",
     "@tauri-apps/plugin-shell": "2.0.0",
+    "@vueuse/core": "^11.1.0",
     "pathe": "^1.1.2",
     "vue": "^3.5.11",
     "vue-i18n": "^10.0.4"
