--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -8,12 +8,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "~2.0.0", features = [] }
+tauri-build = { version = "^2", features = [] }
 
 [dependencies]
-tauri = { version = "~2.0.0", features = [] }
-tauri-plugin-shell = "~2.0.0"
+tauri = { version = "^2", features = [] }
+tauri-plugin-shell = "^2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tauri-plugin-os = "~2.0.0"
-tauri-plugin-fs = "~2.0.0"
+tauri-plugin-os = "^2"
+tauri-plugin-fs = "^2"
+tauri-plugin-dialog = "^2"
