--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,3 +18,10 @@ serde_json = "1"
 tauri-plugin-os = "^2"
 tauri-plugin-fs = "^2"
 tauri-plugin-dialog = "^2"
+
+[profile.release]
+codegen-units = 1 # Allows LLVM to perform better optimization.
+lto = true # Enables link-time-optimizations.
+opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
+panic = "abort" # Higher performance by disabling panic handlers.
+strip = true # Ensures debug symbols are removed.
